Fix backdrop-filter effects on ios.

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,7 @@ a {
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-backdrop-filter: blur(120px);
     backdrop-filter: blur(120px);
     z-index: -1;
 }
@@ -423,6 +424,7 @@ a {
         position: fixed;
         top: 5rem;
         right: 0;
+        -webkit-backdrop-filter :blur(40px);
         backdrop-filter: blur(40px);
         border: 2px solid var(--white);
         opacity: 0;
